<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jp4mobile.cmtzipevaluation.ZipEntryActivity">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/enterZipCodeTitle"
        android:textSize="36sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp"
        />

    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:lineSpacingExtra="8sp"
        android:padding="8dp"
        android:text="@string/zipCodeInstructions"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="55dp"
        />

    <TextView
        android:id="@+id/codeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/zipCodeName"
        app:layout_constraintTop_toBottomOf="@+id/instructions"
        tools:layout_editor_absoluteX="8dp"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="8dp"
        />

    <LinearLayout
        android:id="@+id/imageEntryWrapper"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/codeName"
        tools:layout_editor_absoluteX="8dp"
        tools:ignore="MissingConstraints">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/zip_code" />

        <EditText
            android:id="@+id/zipCodeEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/zipCodeHint"
            android:inputType="number"
            android:padding="8dp"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/unavailableInRegion"
        android:textColor="@color/invalidText"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/imageEntryWrapper" />

    <Button
        android:id="@+id/continueCloseButton"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/continueButtonTitle"
        tools:layout_editor_absoluteX="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>
